; ModuleID = '/home/carl/AnghaBench/Cinder/src/glfw/deps/extr_glad.c_load_GL_VERSION_1_3.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/glfw/deps/extr_glad.c_load_GL_VERSION_1_3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GLAD_GL_VERSION_1_3 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"glActiveTexture\00", align 1
@glad_glActiveTexture = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [17 x i8] c"glSampleCoverage\00", align 1
@glad_glSampleCoverage = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [23 x i8] c"glCompressedTexImage3D\00", align 1
@glad_glCompressedTexImage3D = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [23 x i8] c"glCompressedTexImage2D\00", align 1
@glad_glCompressedTexImage2D = common dso_local global i64 0, align 8
@.str.4 = private unnamed_addr constant [23 x i8] c"glCompressedTexImage1D\00", align 1
@glad_glCompressedTexImage1D = common dso_local global i64 0, align 8
@.str.5 = private unnamed_addr constant [26 x i8] c"glCompressedTexSubImage3D\00", align 1
@glad_glCompressedTexSubImage3D = common dso_local global i64 0, align 8
@.str.6 = private unnamed_addr constant [26 x i8] c"glCompressedTexSubImage2D\00", align 1
@glad_glCompressedTexSubImage2D = common dso_local global i64 0, align 8
@.str.7 = private unnamed_addr constant [26 x i8] c"glCompressedTexSubImage1D\00", align 1
@glad_glCompressedTexSubImage1D = common dso_local global i64 0, align 8
@.str.8 = private unnamed_addr constant [24 x i8] c"glGetCompressedTexImage\00", align 1
@glad_glGetCompressedTexImage = common dso_local global i64 0, align 8
@.str.9 = private unnamed_addr constant [22 x i8] c"glClientActiveTexture\00", align 1
@glad_glClientActiveTexture = common dso_local global i64 0, align 8
@.str.10 = private unnamed_addr constant [18 x i8] c"glMultiTexCoord1d\00", align 1
@glad_glMultiTexCoord1d = common dso_local global i64 0, align 8
@.str.11 = private unnamed_addr constant [19 x i8] c"glMultiTexCoord1dv\00", align 1
@glad_glMultiTexCoord1dv = common dso_local global i64 0, align 8
@.str.12 = private unnamed_addr constant [18 x i8] c"glMultiTexCoord1f\00", align 1
@glad_glMultiTexCoord1f = common dso_local global i64 0, align 8
@.str.13 = private unnamed_addr constant [19 x i8] c"glMultiTexCoord1fv\00", align 1
@glad_glMultiTexCoord1fv = common dso_local global i64 0, align 8
@.str.14 = private unnamed_addr constant [18 x i8] c"glMultiTexCoord1i\00", align 1
@glad_glMultiTexCoord1i = common dso_local global i64 0, align 8
@.str.15 = private unnamed_addr constant [19 x i8] c"glMultiTexCoord1iv\00", align 1
@glad_glMultiTexCoord1iv = common dso_local global i64 0, align 8
@.str.16 = private unnamed_addr constant [18 x i8] c"glMultiTexCoord1s\00", align 1
@glad_glMultiTexCoord1s = common dso_local global i64 0, align 8
@.str.17 = private unnamed_addr constant [19 x i8] c"glMultiTexCoord1sv\00", align 1
@glad_glMultiTexCoord1sv = common dso_local global i64 0, align 8
@.str.18 = private unnamed_addr constant [18 x i8] c"glMultiTexCoord2d\00", align 1
@glad_glMultiTexCoord2d = common dso_local global i64 0, align 8
@.str.19 = private unnamed_addr constant [19 x i8] c"glMultiTexCoord2dv\00", align 1
@glad_glMultiTexCoord2dv = common dso_local global i64 0, align 8
@.str.20 = private unnamed_addr constant [18 x i8] c"glMultiTexCoord2f\00", align 1
@glad_glMultiTexCoord2f = common dso_local global i64 0, align 8
@.str.21 = private unnamed_addr constant [19 x i8] c"glMultiTexCoord2fv\00", align 1
@glad_glMultiTexCoord2fv = common dso_local global i64 0, align 8
@.str.22 = private unnamed_addr constant [18 x i8] c"glMultiTexCoord2i\00", align 1
@glad_glMultiTexCoord2i = common dso_local global i64 0, align 8
@.str.23 = private unnamed_addr constant [19 x i8] c"glMultiTexCoord2iv\00", align 1
@glad_glMultiTexCoord2iv = common dso_local global i64 0, align 8
@.str.24 = private unnamed_addr constant [18 x i8] c"glMultiTexCoord2s\00", align 1
@glad_glMultiTexCoord2s = common dso_local global i64 0, align 8
@.str.25 = private unnamed_addr constant [19 x i8] c"glMultiTexCoord2sv\00", align 1
@glad_glMultiTexCoord2sv = common dso_local global i64 0, align 8
@.str.26 = private unnamed_addr constant [18 x i8] c"glMultiTexCoord3d\00", align 1
@glad_glMultiTexCoord3d = common dso_local global i64 0, align 8
@.str.27 = private unnamed_addr constant [19 x i8] c"glMultiTexCoord3dv\00", align 1
@glad_glMultiTexCoord3dv = common dso_local global i64 0, align 8
@.str.28 = private unnamed_addr constant [18 x i8] c"glMultiTexCoord3f\00", align 1
@glad_glMultiTexCoord3f = common dso_local global i64 0, align 8
@.str.29 = private unnamed_addr constant [19 x i8] c"glMultiTexCoord3fv\00", align 1
@glad_glMultiTexCoord3fv = common dso_local global i64 0, align 8
@.str.30 = private unnamed_addr constant [18 x i8] c"glMultiTexCoord3i\00", align 1
@glad_glMultiTexCoord3i = common dso_local global i64 0, align 8
@.str.31 = private unnamed_addr constant [19 x i8] c"glMultiTexCoord3iv\00", align 1
@glad_glMultiTexCoord3iv = common dso_local global i64 0, align 8
@.str.32 = private unnamed_addr constant [18 x i8] c"glMultiTexCoord3s\00", align 1
@glad_glMultiTexCoord3s = common dso_local global i64 0, align 8
@.str.33 = private unnamed_addr constant [19 x i8] c"glMultiTexCoord3sv\00", align 1
@glad_glMultiTexCoord3sv = common dso_local global i64 0, align 8
@.str.34 = private unnamed_addr constant [18 x i8] c"glMultiTexCoord4d\00", align 1
@glad_glMultiTexCoord4d = common dso_local global i64 0, align 8
@.str.35 = private unnamed_addr constant [19 x i8] c"glMultiTexCoord4dv\00", align 1
@glad_glMultiTexCoord4dv = common dso_local global i64 0, align 8
@.str.36 = private unnamed_addr constant [18 x i8] c"glMultiTexCoord4f\00", align 1
@glad_glMultiTexCoord4f = common dso_local global i64 0, align 8
@.str.37 = private unnamed_addr constant [19 x i8] c"glMultiTexCoord4fv\00", align 1
@glad_glMultiTexCoord4fv = common dso_local global i64 0, align 8
@.str.38 = private unnamed_addr constant [18 x i8] c"glMultiTexCoord4i\00", align 1
@glad_glMultiTexCoord4i = common dso_local global i64 0, align 8
@.str.39 = private unnamed_addr constant [19 x i8] c"glMultiTexCoord4iv\00", align 1
@glad_glMultiTexCoord4iv = common dso_local global i64 0, align 8
@.str.40 = private unnamed_addr constant [18 x i8] c"glMultiTexCoord4s\00", align 1
@glad_glMultiTexCoord4s = common dso_local global i64 0, align 8
@.str.41 = private unnamed_addr constant [19 x i8] c"glMultiTexCoord4sv\00", align 1
@glad_glMultiTexCoord4sv = common dso_local global i64 0, align 8
@.str.42 = private unnamed_addr constant [23 x i8] c"glLoadTransposeMatrixf\00", align 1
@glad_glLoadTransposeMatrixf = common dso_local global i64 0, align 8
@.str.43 = private unnamed_addr constant [23 x i8] c"glLoadTransposeMatrixd\00", align 1
@glad_glLoadTransposeMatrixd = common dso_local global i64 0, align 8
@.str.44 = private unnamed_addr constant [23 x i8] c"glMultTransposeMatrixf\00", align 1
@glad_glMultTransposeMatrixf = common dso_local global i64 0, align 8
@.str.45 = private unnamed_addr constant [23 x i8] c"glMultTransposeMatrixd\00", align 1
@glad_glMultTransposeMatrixd = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64 (i8*)*)* @load_GL_VERSION_1_3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @load_GL_VERSION_1_3(i64 (i8*)* %0) #0 {
  %2 = alloca i64 (i8*)*, align 8
  store i64 (i8*)* %0, i64 (i8*)** %2, align 8
  %3 = load i32, i32* @GLAD_GL_VERSION_1_3, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %99

6:                                                ; preds = %1
  %7 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %8 = call i64 %7(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  store i64 %8, i64* @glad_glActiveTexture, align 8
  %9 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %10 = call i64 %9(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  store i64 %10, i64* @glad_glSampleCoverage, align 8
  %11 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %12 = call i64 %11(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.2, i64 0, i64 0))
  store i64 %12, i64* @glad_glCompressedTexImage3D, align 8
  %13 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %14 = call i64 %13(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.3, i64 0, i64 0))
  store i64 %14, i64* @glad_glCompressedTexImage2D, align 8
  %15 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %16 = call i64 %15(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.4, i64 0, i64 0))
  store i64 %16, i64* @glad_glCompressedTexImage1D, align 8
  %17 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %18 = call i64 %17(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.5, i64 0, i64 0))
  store i64 %18, i64* @glad_glCompressedTexSubImage3D, align 8
  %19 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %20 = call i64 %19(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.6, i64 0, i64 0))
  store i64 %20, i64* @glad_glCompressedTexSubImage2D, align 8
  %21 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %22 = call i64 %21(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.7, i64 0, i64 0))
  store i64 %22, i64* @glad_glCompressedTexSubImage1D, align 8
  %23 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %24 = call i64 %23(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.8, i64 0, i64 0))
  store i64 %24, i64* @glad_glGetCompressedTexImage, align 8
  %25 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %26 = call i64 %25(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.9, i64 0, i64 0))
  store i64 %26, i64* @glad_glClientActiveTexture, align 8
  %27 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %28 = call i64 %27(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.10, i64 0, i64 0))
  store i64 %28, i64* @glad_glMultiTexCoord1d, align 8
  %29 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %30 = call i64 %29(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.11, i64 0, i64 0))
  store i64 %30, i64* @glad_glMultiTexCoord1dv, align 8
  %31 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %32 = call i64 %31(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.12, i64 0, i64 0))
  store i64 %32, i64* @glad_glMultiTexCoord1f, align 8
  %33 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %34 = call i64 %33(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.13, i64 0, i64 0))
  store i64 %34, i64* @glad_glMultiTexCoord1fv, align 8
  %35 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %36 = call i64 %35(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.14, i64 0, i64 0))
  store i64 %36, i64* @glad_glMultiTexCoord1i, align 8
  %37 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %38 = call i64 %37(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.15, i64 0, i64 0))
  store i64 %38, i64* @glad_glMultiTexCoord1iv, align 8
  %39 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %40 = call i64 %39(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.16, i64 0, i64 0))
  store i64 %40, i64* @glad_glMultiTexCoord1s, align 8
  %41 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %42 = call i64 %41(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.17, i64 0, i64 0))
  store i64 %42, i64* @glad_glMultiTexCoord1sv, align 8
  %43 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %44 = call i64 %43(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.18, i64 0, i64 0))
  store i64 %44, i64* @glad_glMultiTexCoord2d, align 8
  %45 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %46 = call i64 %45(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.19, i64 0, i64 0))
  store i64 %46, i64* @glad_glMultiTexCoord2dv, align 8
  %47 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %48 = call i64 %47(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.20, i64 0, i64 0))
  store i64 %48, i64* @glad_glMultiTexCoord2f, align 8
  %49 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %50 = call i64 %49(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.21, i64 0, i64 0))
  store i64 %50, i64* @glad_glMultiTexCoord2fv, align 8
  %51 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %52 = call i64 %51(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.22, i64 0, i64 0))
  store i64 %52, i64* @glad_glMultiTexCoord2i, align 8
  %53 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %54 = call i64 %53(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.23, i64 0, i64 0))
  store i64 %54, i64* @glad_glMultiTexCoord2iv, align 8
  %55 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %56 = call i64 %55(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.24, i64 0, i64 0))
  store i64 %56, i64* @glad_glMultiTexCoord2s, align 8
  %57 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %58 = call i64 %57(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.25, i64 0, i64 0))
  store i64 %58, i64* @glad_glMultiTexCoord2sv, align 8
  %59 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %60 = call i64 %59(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.26, i64 0, i64 0))
  store i64 %60, i64* @glad_glMultiTexCoord3d, align 8
  %61 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %62 = call i64 %61(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.27, i64 0, i64 0))
  store i64 %62, i64* @glad_glMultiTexCoord3dv, align 8
  %63 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %64 = call i64 %63(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.28, i64 0, i64 0))
  store i64 %64, i64* @glad_glMultiTexCoord3f, align 8
  %65 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %66 = call i64 %65(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.29, i64 0, i64 0))
  store i64 %66, i64* @glad_glMultiTexCoord3fv, align 8
  %67 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %68 = call i64 %67(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.30, i64 0, i64 0))
  store i64 %68, i64* @glad_glMultiTexCoord3i, align 8
  %69 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %70 = call i64 %69(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.31, i64 0, i64 0))
  store i64 %70, i64* @glad_glMultiTexCoord3iv, align 8
  %71 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %72 = call i64 %71(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.32, i64 0, i64 0))
  store i64 %72, i64* @glad_glMultiTexCoord3s, align 8
  %73 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %74 = call i64 %73(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.33, i64 0, i64 0))
  store i64 %74, i64* @glad_glMultiTexCoord3sv, align 8
  %75 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %76 = call i64 %75(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.34, i64 0, i64 0))
  store i64 %76, i64* @glad_glMultiTexCoord4d, align 8
  %77 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %78 = call i64 %77(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.35, i64 0, i64 0))
  store i64 %78, i64* @glad_glMultiTexCoord4dv, align 8
  %79 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %80 = call i64 %79(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.36, i64 0, i64 0))
  store i64 %80, i64* @glad_glMultiTexCoord4f, align 8
  %81 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %82 = call i64 %81(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.37, i64 0, i64 0))
  store i64 %82, i64* @glad_glMultiTexCoord4fv, align 8
  %83 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %84 = call i64 %83(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.38, i64 0, i64 0))
  store i64 %84, i64* @glad_glMultiTexCoord4i, align 8
  %85 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %86 = call i64 %85(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.39, i64 0, i64 0))
  store i64 %86, i64* @glad_glMultiTexCoord4iv, align 8
  %87 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %88 = call i64 %87(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.40, i64 0, i64 0))
  store i64 %88, i64* @glad_glMultiTexCoord4s, align 8
  %89 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %90 = call i64 %89(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.41, i64 0, i64 0))
  store i64 %90, i64* @glad_glMultiTexCoord4sv, align 8
  %91 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %92 = call i64 %91(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.42, i64 0, i64 0))
  store i64 %92, i64* @glad_glLoadTransposeMatrixf, align 8
  %93 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %94 = call i64 %93(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.43, i64 0, i64 0))
  store i64 %94, i64* @glad_glLoadTransposeMatrixd, align 8
  %95 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %96 = call i64 %95(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.44, i64 0, i64 0))
  store i64 %96, i64* @glad_glMultTransposeMatrixf, align 8
  %97 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %98 = call i64 %97(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.45, i64 0, i64 0))
  store i64 %98, i64* @glad_glMultTransposeMatrixd, align 8
  br label %99

99:                                               ; preds = %6, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
